[gd_scene load_steps=15 format=2]

[ext_resource path="res://textures/bluepaddle.png" type="Texture" id=1]
[ext_resource path="res://src/Blue_Paddle.gd" type="Script" id=2]
[ext_resource path="res://textures/redpaddle.png" type="Texture" id=3]
[ext_resource path="res://textures/Ball.png" type="Texture" id=4]
[ext_resource path="res://src/Ball.gd" type="Script" id=5]
[ext_resource path="res://src/Red_Paddle.gd" type="Script" id=6]
[ext_resource path="res://src/Pong.gd" type="Script" id=8]

[sub_resource type="SegmentShape2D" id=6]
a = Vector2( 0, 600 )
b = Vector2( 1024, 600 )

[sub_resource type="SegmentShape2D" id=5]
b = Vector2( 1024, 0 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 512.5, 300 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 7, 64 )

[sub_resource type="CircleShape2D" id=7]

[sub_resource type="DynamicFontData" id=9]
font_path = "res://fonts/ComicSansMS3.ttf"

[sub_resource type="DynamicFont" id=8]
size = 30
use_mipmaps = true
use_filter = true
font_data = SubResource( 9 )

[node name="Pong" type="Node2D"]
script = ExtResource( 8 )

[node name="Barrier" type="StaticBody2D" parent="."]

[node name="BottomBarrier" type="CollisionShape2D" parent="Barrier"]
shape = SubResource( 6 )

[node name="TopBarrier" type="CollisionShape2D" parent="Barrier"]
shape = SubResource( 5 )

[node name="Game_Area" type="Area2D" parent="."]

[node name="Game_Area_Detection" type="CollisionShape2D" parent="Game_Area"]
position = Vector2( 513, 300 )
shape = SubResource( 3 )
one_way_collision_margin = 0.0

[node name="Red_Paddle" type="KinematicBody2D" parent="."]
position = Vector2( 974, 300 )
script = ExtResource( 6 )

[node name="Red_Paddle_Collision" type="CollisionShape2D" parent="Red_Paddle"]
shape = SubResource( 4 )

[node name="Red_Paddle_Sprite" type="Sprite" parent="Red_Paddle"]
scale = Vector2( 0.0175, 0.213333 )
texture = ExtResource( 3 )

[node name="Blue_Paddle" type="KinematicBody2D" parent="."]
position = Vector2( 50, 300 )
script = ExtResource( 2 )

[node name="Blue_Paddle_Sprite" type="Sprite" parent="Blue_Paddle"]
scale = Vector2( 0.0175, 0.213333 )
texture = ExtResource( 1 )

[node name="Blue_Paddle_Colision" type="CollisionShape2D" parent="Blue_Paddle"]
shape = SubResource( 4 )

[node name="ball" type="KinematicBody2D" parent="."]
position = Vector2( 513, 300 )
script = ExtResource( 5 )

[node name="ballcollider" type="CollisionShape2D" parent="ball"]
shape = SubResource( 7 )

[node name="Ball2" type="Sprite" parent="ball"]
position = Vector2( 1.56251, 1.09376 )
scale = Vector2( 0.0964062, 0.0936458 )
texture = ExtResource( 4 )

[node name="BlueScore" type="Label" parent="."]
margin_right = 57.0
margin_bottom = 77.0
custom_fonts/font = SubResource( 8 )
text = "0"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RedScore" type="Label" parent="."]
margin_left = 967.0
margin_right = 1024.0
margin_bottom = 77.0
custom_fonts/font = SubResource( 8 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="body_exited" from="Game_Area" to="." method="_on_Game_Area_body_exited"]
[connection signal="body_exited" from="Game_Area" to="ball" method="_on_Game_Area_body_exited"]
